ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockerdemo
spec:
  ingressClassName: nginx-internal
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dockerdemo
            port:
              number: 80
